--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,6 +14,7 @@ tasks:
       sudo apt-get install libgl1-mesa-glx
       pip install tensorflow
       pip install tensorflow_datasets
+      pip install scikit-image
       pip install mltu
       pip install stow
       pip install tf2onnx
