--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@ _datasets/IMPORTANT_DATASET/emnist-gzip.zip
 _datasets/gzip.zip
 _datasets/IMPORTANT_DATASET/emnist_bymerge_test_dataset.npz
 _datasets/IMPORTANT_DATASET/emnist_bymerge_train_dataset.npz
-MODELS/1_binary_input/emnist*.npz
+MODELS/emnist*.npz
